--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: run-unit-tests
         name: Run MinUnit tests
-        entry: cmd /c "gcc -o test_math_ops math_ops.c minunit.c test_math_ops.c && test_math_ops.exe"
-        language: script
+        entry: sh -c "gcc -o test_math_ops math_ops.c test_math_ops.c && ./test_math_ops"
+        language: system
         files: \.(c|h)$
-        stages: [commit]
+        stages: [pre-commit]
